post 실시간 문제풀이방 연계 제외 모두 완료